--- a/Css/Curso 1/9. Posicion de elementos/7. Propiedad z-index en css/style.css
+++ b/Css/Curso 1/9. Posicion de elementos/7. Propiedad z-index en css/style.css
@@ -19,5 +19,15 @@ div.relativo{
     border: 3px solid blueviolet;
     background-color:whitesmoke;
     /*z-index posiciona los elementos sobre o debajo  -1 abajo y sobre 1+*/
-    z-index: 1;
+    
+}
+
+div.absoluto{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 112px;;
+    border: 3px solid cornflowerblue;
+    background-color: whitesmoke;
+    z-index: -1;
 }
