--- a/Css/Curso 1/10. Selectores/3.subling/style.css
+++ b/Css/Curso 1/10. Selectores/3.subling/style.css
@@ -20,3 +20,12 @@ div.contenedor{
  div.contenedor.hijo > p{
     background-color: #ffc6ff;
  }
+
+ /* no selecciona los elementos de mismo nivel si no los externos (selecciona solo el primero)*/
+ div.contenedor.adyacente + p{
+    background-color: #caffbf;
+ }
+
+ div.contenedor.hermano ~ p{
+    background-color: #9bf6ff
+ }
