--- a/Css/Curso 1/10. Selectores/5. peudo Elementos/style.css
+++ b/Css/Curso 1/10. Selectores/5. peudo Elementos/style.css
@@ -31,3 +31,15 @@ div.contenedor p::first-line{
 div.contenedor p::first-letter{
     font-size: 1.5em;
 }
+
+/*Pseudo elementos antes o despues*/
+
+/*Pseudo elemento antes:*/
+div.contenedor p::before{
+    content: "- ";
+}
+
+/*Pseudo elemento despues:*/
+div.contenedor p::after{
+    content: " -";
+}
