--- a/Html, Css, Js/1. Escuela de JavaScript 2022 - De cero a Master en JavaScript/2. Css/1.menu de navegacion/style.css
+++ b/Html, Css, Js/1. Escuela de JavaScript 2022 - De cero a Master en JavaScript/2. Css/1.menu de navegacion/style.css
@@ -1,9 +1,19 @@
+*{
+    font-family: sans-serif;
+    padding: 0px;
+    margin: 0px;
+    /*Ajusta el contenido de las cajas*/
+    box-sizing: border-box;
+}
+
 .menu{
-     background-color:aqua;
+     background-color:rgb(22, 158, 158);
+     padding: 10px 0px;
 }
 
 .menu-nav{
     list-style: none;
+    margin: 0px;
 }
 
 .menu-nav__item{
@@ -19,7 +29,7 @@
 
 .menu-nav__item a:hover{
     color: red;
-    font-size: 2em;
+
 }
 
 
@@ -35,4 +45,13 @@
 
 .menu-nav__item a::before{
     content: " | ";
+}
+
+/*Modelo de cajas*/
+
+main{
+    width: 100%;
+    height:300px;
+    border: 10px solid grey;
+    padding: 20px 35px;
 }
